--- a/.config/nvim/dein/plugin-lasy.toml
+++ b/.config/nvim/dein/plugin-lasy.toml
@@ -12,10 +12,10 @@ hook_add = '''
     nnoremap <silent><C-a> :NERDTreeToggle<CR>:vertical res 30<CR>
 '''
 
-[[plugins]] # ディレクトリツリーの表示
+[[plugins]] # ディレクトリツリーにアイコンを追加
 repo = 'ryanoasis/vim-devicons'
 
-[[plugins]] # カラースキーマの設定
+[[plugins]] # 各種Lintを非同期に実行
 repo = 'w0rp/ale'
 hook_add = '''
 let g:ale_lint_on_text_changed = 0
@@ -32,7 +32,7 @@ let g:ale_lint_on_text_changed = 0
   nmap <silent> <C-j> <Plug>(ale_next_wrap)
 '''
 
-[[plugins]] # 各種Lintを非同期に実行
+[[plugins]] # カラースキーマの設定
 repo = 'gosukiwi/vim-atom-dark'
 hook_add = '''
   colorscheme atom-dark-256
