--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 ##### Gitで管理するファイルリスト #####
 !/.config
 !.gitignore
+!/.cheatsheet.md
 
 # 上記に"無視したくないファイル"としてリスト化した中から、さらに"無視したいファイル"を指定
 /.config/coc
+/.config/configstore
